# zonnetijden

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  README.md  __main__.py  build.sh  env.sh  pyproject.toml  renovate.json  requirements.txt  run.sh  zonnetijden.py
.github/workflows/: tests.yaml
cron/: installcron.sh  zonnetijden
templates/: vandaag.html  weer.html
tests/: test_flask.py  test_zonnetijden.py  testdata_weerinfo.json
