[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zonnetijden"
version = "1.0.0"
authors = [
  { name="Peter van de Riet", email="vdriet@gmail.com" },
]
description = "zonnetijden in Docker"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vdriet/zonnetijden"
Issues = "https://github.com/vdriet/zonnetijden/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
